# txttree

./: LICENSE  README.md  setup.cfg
.github/workflows/: upload-pypi.yml
src/txttree/: __main__.py  app.py
test/Easy Company/: Easy Company.txt
test/Easy Company/1st Platoon/: 1st Platoon.txt
test/Easy Company/2nd Platoon/: 2nd Platoon.txt
test/Easy Company/3rd Platoon/: 3rd Platoon.txt
