[metadata]
name = txttree
version = 0.0.0
author = Steven van Gemert
author_email = steven@vangemert.dev
description = Display and organize hierarchical relationships using a file-based structure and text files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spmvg/txttree
license = MIT
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    typer

[options.packages.find]
where = src